2010-04-23  Sancho Lerena <slerena@artica.es>

	* include/config_process.php: Fixed a doble include in the
	functions_enterprise.php file (breaks the tab "inventory" in the
	agent view).

2010-04-23  Sergio Martin  <sergio.martin@artica.es>

	* general/ui/agents_list.php: Changed the all group
	condition from 1 to 0

2010-04-23  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/reporting_builder.php: Changed the
	All group on combos from 1 to 0 and fix the
	group all on tables

2010-04-22 Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/reporting_builder.php: re-added the list of reports,
	re-added the delete reports. And fixed the notice PHP message and the
	action edit in the main tab.

2010-04-23  Sergio Martin <sergio.martin@artica.es>

       * pandoradb.sql
       extras/pandoradb_migrate_v3.0_to_v3.1.sql: Dropped the
	foreign key between treport and tgrupo

2010-04-23  Sergio Martin <sergio.martin@artica.es>

       * godmode/servers/manage_recontask_form.php: 
	Added the All group to combo

2010-04-23  Sergio Martin <sergio.martin@artica.es>

       * operation/visual_console/index.php
       godmode/reporting/map_builder.php: Fixed the
        group all on tables

2010-04-23  Sergio Martin <sergio.martin@artica.es>

       * godmode/alerts/alert_compounds.php
       godmode/alerts/alert_list.php
       godmode/alerts/alert_templates.php
       godmode/alerts/configure_alert_action.php
       godmode/alerts/alert_actions.php: Changed the
        All group on combos from 1 to 0 and fix the
        group all on tables

2010-04-22 Miguel de Dios  <miguel.dedios@artica.es>

	* include/ajax/reporting.ajax.php: added ajax respond to delete_sla_item and
	add_sla actions.
	
	* include/functions.php: added in the function "get_report_types" new types
	of items/contents for reporting.

	* pandoradb.sql: added columns custom_logo, header, first_page, footer,
	custom_font into the table treport. And in the table treport_content have