@@ -1,3 +1,9 @@
+2010-04-26  Junichi Satoh  <junichi@rworks.jp>
+
+	* godmode/agentes/module_manager_editor_plugin.php,
+	godmode/agentes/module_manager_editor_wmi.php,
+	godmode/agentes/module_manager_editor_network.php: Added missing '_'.
+
 2010-04-23  Sancho Lerena <slerena@artica.es>
 
 	* include/config_process.php: Fixed a doble include in the
